--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "center",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saimounik07.github.io/InterStore-Center",
+  "homepage": "https://saimounik07.github.io/myStore-Center",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +16,7 @@
     "react-burger-menu": "^3.0.9",
     "react-icons": "^4.10.1",
     "react-icons-kit": "^2.0.0",
+    "react-loader-icon": "^1.0.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.4",
@@ -26,9 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +51,4 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   }
-
 }
